change the flights dataset cz of unknown licence & update notebooks and README file

--- a/3-polars-tutorial-part-1.ipynb
+++ b/3-polars-tutorial-part-1.ipynb
@@ -642,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 24,
    "id": "63fac5d7",
    "metadata": {},
    "outputs": [
@@ -665,7 +665,7 @@
        "]"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -679,7 +679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 25,
    "id": "05830b3f",
    "metadata": {},
    "outputs": [
@@ -697,7 +697,7 @@
        "]"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -711,7 +711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 26,
    "id": "61cdca14",
    "metadata": {},
    "outputs": [
@@ -734,7 +734,7 @@
        "]"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -756,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "id": "f65162bd",
    "metadata": {},
    "outputs": [
@@ -773,7 +773,7 @@
        "])"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -794,7 +794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "id": "3b7acd52",
    "metadata": {},
    "outputs": [
@@ -816,7 +816,7 @@
        "]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -844,48 +844,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "a239fa4b",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "shape: (6,)\n",
-       "Series: 'some_missing' [i32]\n",
-       "[\n",
-       "\t1\n",
-       "\t1\n",
-       "\t3\n",
-       "\t4\n",
-       "\t4\n",
-       "\t6\n",
-       "]"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "let s = Series::new(\"some_missing\", &[Some(1), None, Some(3), Some(4), None, Some(6)]);\n",
-    "let filled = s.fill_null(FillNullStrategy::Forward(None)).unwrap();\n",
-    "filled"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "6284cf8e",
-   "metadata": {},
-   "source": [
-    "### 2. Backward fill"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 29,
-   "id": "cfae8d65",
+   "id": "a239fa4b",
    "metadata": {},
    "outputs": [
     {
@@ -916,6 +876,46 @@
   },
   {
    "cell_type": "markdown",
+   "id": "6284cf8e",
+   "metadata": {},
+   "source": [
+    "### 2. Backward fill"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "cfae8d65",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "shape: (6,)\n",
+       "Series: 'some_missing' [i32]\n",
+       "[\n",
+       "\t1\n",
+       "\t3\n",
+       "\t3\n",
+       "\t4\n",
+       "\t6\n",
+       "\t6\n",
+       "]"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "let s = Series::new(\"some_missing\", &[Some(1), None, Some(3), Some(4), None, Some(6)]);\n",
+    "let filled = s.fill_null(FillNullStrategy::Backward(None)).unwrap();\n",
+    "filled"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "ffdd6a68",
    "metadata": {},
    "source": [
@@ -924,7 +924,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "id": "0d33ffa2",
    "metadata": {},
    "outputs": [
@@ -943,7 +943,7 @@
        "]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -964,48 +964,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "id": "a68a40ec",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "shape: (6,)\n",
-       "Series: 'some_missing' [i32]\n",
-       "[\n",
-       "\t1\n",
-       "\t1\n",
-       "\t3\n",
-       "\t4\n",
-       "\t1\n",
-       "\t6\n",
-       "]"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "let s = Series::new(\"some_missing\", &[Some(1), None, Some(3), Some(4), None, Some(6)]);\n",
-    "let filled = s.fill_null(FillNullStrategy::Min).unwrap();\n",
-    "filled"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "4fc185fe",
-   "metadata": {},
-   "source": [
-    "### 5. Max fill"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 32,
-   "id": "4ff734e7",
+   "id": "a68a40ec",
    "metadata": {},
    "outputs": [
     {
@@ -1036,6 +996,46 @@
   },
   {
    "cell_type": "markdown",
+   "id": "4fc185fe",
+   "metadata": {},
+   "source": [
+    "### 5. Max fill"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "4ff734e7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "shape: (6,)\n",
+       "Series: 'some_missing' [i32]\n",
+       "[\n",
+       "\t1\n",
+       "\t6\n",
+       "\t3\n",
+       "\t4\n",
+       "\t6\n",
+       "\t6\n",
+       "]"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "let s = Series::new(\"some_missing\", &[Some(1), None, Some(3), Some(4), None, Some(6)]);\n",
+    "let filled = s.fill_null(FillNullStrategy::Max).unwrap();\n",
+    "filled"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "c7dd313b",
    "metadata": {},
    "source": [
@@ -1044,7 +1044,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "id": "0ec56831",
    "metadata": {},
    "outputs": [
@@ -1061,7 +1061,7 @@
        "])"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1098,7 +1098,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "id": "9e0af37a",
    "metadata": {},
    "outputs": [
@@ -1108,7 +1108,7 @@
        "-1.09"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1128,7 +1128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 36,
    "id": "64eb9d9e",
    "metadata": {},
    "outputs": [
@@ -1138,7 +1138,7 @@
        "0.53"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1158,7 +1158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 37,
    "id": "d60f2d8c",
    "metadata": {},
    "outputs": [
@@ -1168,13 +1168,13 @@
        "shape: (3,)\n",
        "Series: 'Measurements' [f64]\n",
        "[\n",
-       "\t3.98\n",
        "\t0.53\n",
        "\t-7.04\n",
+       "\t3.98\n",
        "]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1202,7 +1202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 38,
    "id": "4a2af097",
    "metadata": {},
    "outputs": [
@@ -1216,7 +1216,7 @@
        "]"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
