add  and  sections
Signed-off-by: wiseaidev <business@wiseai.dev>

--- a/6-plotters-tutorial-part-1.ipynb
+++ b/6-plotters-tutorial-part-1.ipynb
@@ -16,7 +16,8 @@
    "outputs": [],
    "source": [
     ":dep plotters = { version = \"^0.3.4\", default_features = false, features = [\"evcxr\", \"all_series\"] }\n",
-    ":dep ndarray = {version = \"0.15.6\"}"
+    ":dep ndarray = {version = \"0.15.6\"}\n",
+    ":dep ndarray-rand = {version = \"0.14.0\"}"
    ]
   },
   {
@@ -29,14 +30,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "6e796a35",
    "metadata": {},
    "outputs": [],
    "source": [
     "use plotters::prelude::*;\n",
     "use ndarray::prelude::*;\n",
-    "use ndarray::{array, Array, s};"
+    "use ndarray::{array, Array, s};\n",
+    "use ndarray_rand::RandomExt;\n",
+    "use ndarray_rand::rand_distr::Uniform;"
    ]
   },
   {
@@ -65,24 +68,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "c3541c6b",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div style=\"width:100%\"><svg width=\"640\" height=\"240\" viewBox=\"0 0 640 240\" xmlns=\"http://www.w3.org/2000/svg\">\n",
-       "<polyline fill=\"none\" opacity=\"1\" stroke=\"#FF0000\" stroke-width=\"1\" points=\"91,205 182,171 273,137 365,103 456,69 547,35 \"/>\n",
-       "</svg>\n",
-       "</div>"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "evcxr_figure((640, 240), |root| {\n",
     "    let mut chart = ChartBuilder::on(&root)\n",
@@ -108,24 +97,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "be7d211a",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div style=\"width:100%\"><svg width=\"640\" height=\"240\" viewBox=\"0 0 640 240\" xmlns=\"http://www.w3.org/2000/svg\">\n",
-       "<polyline fill=\"none\" opacity=\"1\" stroke=\"#FF0000\" stroke-width=\"1\" points=\"91,205 182,171 273,137 365,103 456,69 547,35 \"/>\n",
-       "</svg>\n",
-       "</div>"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "evcxr_figure((640, 240), |root| {\n",
     "    let mut chart = ChartBuilder::on(&root)\n",
@@ -151,21 +126,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "ffbb9928",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[(1.0, 1.0), (2.0, 8.0), (3.0, 27.0), (4.0, 64.0), (5.0, 125.0), (6.0, 216.0)]"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "let points_coordinates: Vec<(f32, f32)> = {\n",
     "    let x_axis = vec![1.0, 2.0, 3.0, 4.0, 5.0, 6.0];\n",
@@ -177,24 +141,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "cdb376ec",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div style=\"width:100%\"><svg width=\"640\" height=\"240\" viewBox=\"0 0 640 240\" xmlns=\"http://www.w3.org/2000/svg\">\n",
-       "<polyline fill=\"none\" opacity=\"1\" stroke=\"#FF0000\" stroke-width=\"1\" points=\"91,238 182,231 273,210 365,170 456,104 547,5 \"/>\n",
-       "</svg>\n",
-       "</div>"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "evcxr_figure((640, 240), |root| {\n",
     "    let mut chart = ChartBuilder::on(&root)\n",
@@ -234,21 +184,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "992a2f79",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[(1.0, 1.0), (2.0, 4.0), (3.0, 9.0), (4.0, 16.0), (5.0, 25.0), (6.0, 36.0)]"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "let linear_coordinates: Vec<(f32, f32)> = {\n",
     "    let x_axis = vec![1.0, 2.0, 3.0, 4.0, 5.0, 6.0];\n",
@@ -270,26 +209,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "a790cf8d",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div style=\"width:100%\"><svg width=\"640\" height=\"240\" viewBox=\"0 0 640 240\" xmlns=\"http://www.w3.org/2000/svg\">\n",
-       "<polyline fill=\"none\" opacity=\"1\" stroke=\"#FF0000\" stroke-width=\"1\" points=\"91,238 182,237 273,236 365,235 456,234 547,233 \"/>\n",
-       "<polyline fill=\"none\" opacity=\"1\" stroke=\"#00FF00\" stroke-width=\"1\" points=\"91,238 182,235 273,230 365,222 456,212 547,200 \"/>\n",
-       "<polyline fill=\"none\" opacity=\"1\" stroke=\"#0000FF\" stroke-width=\"1\" points=\"91,238 182,231 273,210 365,170 456,104 547,5 \"/>\n",
-       "</svg>\n",
-       "</div>"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "evcxr_figure((640, 240), |root| {\n",
     "    let mut chart = ChartBuilder::on(&root)\n",
@@ -324,21 +247,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "47eb8011",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[(1.0, 1.0), (2.0, 4.0), (3.0, 9.0), (4.0, 16.0)]"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "let linear_coordinates: Vec<(f32, f32)> = {\n",
     "    let x_y_axes = array!([[1., 2., 3., 4.], [1., 2., 3., 4.]]);\n",
@@ -357,27 +269,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "e9b1dc72",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div style=\"width:100%\"><svg width=\"640\" height=\"240\" viewBox=\"0 0 640 240\" xmlns=\"http://www.w3.org/2000/svg\">\n",
-       "<polyline fill=\"none\" opacity=\"1\" stroke=\"#FF0000\" stroke-width=\"1\" points=\"127,225 255,211 383,197 511,183 \"/>\n",
-       "<polyline fill=\"none\" opacity=\"1\" stroke=\"#00FF00\" stroke-width=\"1\" points=\"127,225 255,183 383,113 511,15 \"/>\n",
-       "</svg>\n",
-       "</div>"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "evcxr_figure((640, 240), |root| {\n",
     "    let mut chart = ChartBuilder::on(&root)\n",
@@ -395,6 +292,239 @@
     "\n",
     "    Ok(())\n",
     "}).style(\"width:100%\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "540cd471",
+   "metadata": {},
+   "source": [
+    "### Using Ndarray-Rand"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "80d06770",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "let mut random_samples: Vec<(f32, f32)> = {\n",
+    "    let x_y_axes = Array::random((2, 50), Uniform::new(0., 1.));\n",
+    "    let x_axis: Vec<f32> = x_y_axes.slice(s![0, ..]).to_vec();\n",
+    "    let y_axis: Vec<f32> = x_y_axes.slice(s![1, ..]).to_vec();\n",
+    "    x_axis.into_iter().zip(y_axis).collect()\n",
+    "};\n",
+    "random_samples.sort_by(|(a, b), (c, d)| a.partial_cmp(c).unwrap());\n",
+    "random_samples[..10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7dd5fb79",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "evcxr_figure((640, 240), |root| {\n",
+    "    let mut chart = ChartBuilder::on(&root)\n",
+    "        .build_cartesian_2d(0f32..1f32, 0f32..1f32)?;\n",
+    "\n",
+    "    chart.draw_series(LineSeries::new(\n",
+    "        random_samples.iter().map(|(x, y)| (*x, *y)),\n",
+    "        &RED,\n",
+    "    ))?;\n",
+    "\n",
+    "    Ok(())\n",
+    "}).style(\"width:100%\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9f073df9",
+   "metadata": {},
+   "source": [
+    "<hr />"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "12759274",
+   "metadata": {},
+   "source": [
+    "## Grid, Axes, and Labels"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cd7e4da0",
+   "metadata": {},
+   "source": [
+    "### Add a Mesh/Grid"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "12d3bbfa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "evcxr_figure((640, 240), |root| {\n",
+    "    let mut chart = ChartBuilder::on(&root)\n",
+    "        .build_cartesian_2d(0f32..1f32, 0f32..1f32)?;\n",
+    "\n",
+    "    chart.configure_mesh().draw()?;\n",
+    "\n",
+    "    Ok(())\n",
+    "}).style(\"width:100%\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b3c31798",
+   "metadata": {},
+   "source": [
+    "### Add Labels"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "50c40088",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "evcxr_figure((640, 480), |root| {\n",
+    "    // The following code will create a chart context\n",
+    "    let mut chart = ChartBuilder::on(&root)\n",
+    "        .caption(\"Plot Demo\", (\"Arial\", 20).into_font())\n",
+    "        .x_label_area_size(50)\n",
+    "        .y_label_area_size(50)\n",
+    "        .build_cartesian_2d(0f32..1f32, 0f32..1f32)?;\n",
+    "    \n",
+    "    chart.configure_mesh()\n",
+    "        .x_desc(\"x = Array::range(1., 7., 1.);\")\n",
+    "        .y_desc(\"y = f(x)\")\n",
+    "        .draw()?;\n",
+    "    \n",
+    "    Ok(())\n",
+    "}).style(\"width: 60%\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0910d4d9",
+   "metadata": {},
+   "source": [
+    "### Legend"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "33d76fae",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "evcxr_figure((640, 480), |root| {\n",
+    "    // The following code will create a chart context\n",
+    "    let mut chart = ChartBuilder::on(&root)\n",
+    "        .caption(\"Plot Demo\", (\"Arial\", 20).into_font())\n",
+    "        .x_label_area_size(50)\n",
+    "        .y_label_area_size(50)\n",
+    "        .build_cartesian_2d(1f32..7f32, 1f32..14f32)?;\n",
+    "    \n",
+    "    let x = Array::range(1., 7., 0.1);\n",
+    "    \n",
+    "    chart.configure_mesh()\n",
+    "        .x_desc(\"x = Array::range(1., 7., 0.1);\")\n",
+    "        .y_desc(\"y = f(x)\")\n",
+    "        .draw()?;\n",
+    "\n",
+    "    chart.draw_series(LineSeries::new(\n",
+    "        x.iter().map(|x| (*x, *x)),\n",
+    "        &RED\n",
+    "    )).unwrap()\n",
+    "        .label(\"y = x\")\n",
+    "        .legend(|(x,y)| PathElement::new(vec![(x,y), (x + 20,y)], &RED));\n",
+    "    \n",
+    "    chart.draw_series(LineSeries::new(\n",
+    "        x.iter().map(|x| (*x, *x * 2.0)),\n",
+    "        &GREEN\n",
+    "    )).unwrap()\n",
+    "        .label(\"y = 2 * x\")\n",
+    "        .legend(|(x,y)| PathElement::new(vec![(x,y), (x + 20,y)], &GREEN));\n",
+    "\n",
+    "    chart.configure_series_labels()\n",
+    "        .background_style(&WHITE)\n",
+    "        .border_style(&BLACK)\n",
+    "        .draw()?;\n",
+    "\n",
+    "    Ok(())\n",
+    "}).style(\"width: 60%\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d46ef091",
+   "metadata": {},
+   "source": [
+    "### Legend Position"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d108e3ee",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "evcxr_figure((640, 480), |root| {\n",
+    "    // The following code will create a chart context\n",
+    "    let mut chart = ChartBuilder::on(&root)\n",
+    "        .caption(\"Plot Demo\", (\"Arial\", 20).into_font())\n",
+    "        .x_label_area_size(50)\n",
+    "        .y_label_area_size(50)\n",
+    "        .build_cartesian_2d(1f32..7f32, 1f32..14f32)?;\n",
+    "    \n",
+    "    let x = Array::range(1., 7., 0.1);\n",
+    "    \n",
+    "    chart.configure_mesh()\n",
+    "        .x_desc(\"x = Array::range(1., 7., 0.1);\")\n",
+    "        .y_desc(\"y = f(x)\")\n",
+    "        .draw()?;\n",
+    "\n",
+    "    chart.draw_series(LineSeries::new(\n",
+    "        x.iter().map(|x| (*x, *x)),\n",
+    "        &RED\n",
+    "    )).unwrap()\n",
+    "        .label(\"y = x\")\n",
+    "        .legend(|(x,y)| PathElement::new(vec![(x,y), (x + 20,y)], &RED));\n",
+    "    \n",
+    "    chart.draw_series(LineSeries::new(\n",
+    "        x.iter().map(|x| (*x, *x * 2.0)),\n",
+    "        &GREEN\n",
+    "    )).unwrap()\n",
+    "        .label(\"y = 2 * x\")\n",
+    "        .legend(|(x,y)| PathElement::new(vec![(x,y), (x + 20,y)], &GREEN));\n",
+    "\n",
+    "    chart.configure_series_labels()\n",
+    "        .position(SeriesLabelPosition::UpperMiddle)\n",
+    "        .background_style(&WHITE)\n",
+    "        .border_style(&BLACK)\n",
+    "        .draw()?;\n",
+    "\n",
+    "    Ok(())\n",
+    "}).style(\"width: 60%\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d11194f9",
+   "metadata": {},
+   "source": [
+    "<hr />"
    ]
   }
  ],
