split & bump deps versions && upgrade to notebook 7 && fix mode

--- a/3-polars-tutorial-part-1.ipynb
+++ b/3-polars-tutorial-part-1.ipynb
@@ -15,8 +15,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    ":dep chrono = { version = \"0.4.24\"}\n",
-    ":dep polars = { version = \"0.28.0\", features = [\"describe\", \"lazy\", \"ndarray\", \"object\", \"dtype-struct\", \"concat_str\", \"mode\"] }"
+    ":dep chrono = { version = \"0.4.31\"}\n",
+    "// or\n",
+    "// :dep chrono = { git = \"https://github.com/chronotope/chrono\" }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "b32d0646-96c4-41f8-8932-8da8cd878e14",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    ":dep polars = { version = \"0.35.0\", features = [\"describe\", \"lazy\", \"ndarray\", \"object\", \"dtype-struct\", \"concat_str\", \"mode\"] }\n",
+    "// or\n",
+    "// :dep blas-src = { git = \"https://github.com/pola-rs/polars\", features = [\"describe\", \"lazy\", \"ndarray\", \"object\", \"dtype-struct\", \"concat_str\", \"mode\"]}"
    ]
   },
   {
@@ -37,13 +50,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "c419627f",
    "metadata": {},
    "outputs": [],
    "source": [
     "use polars::datatypes::DataType;\n",
-    "use polars::chunked_array::object::{FillNullStrategy, QuantileInterpolOptions};\n",
     "use polars::prelude::*;\n",
     "use chrono::{DateTime, NaiveDateTime, TimeZone, Utc};\n",
     "use std::sync::Arc;"
@@ -67,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "93a70fc4",
    "metadata": {},
    "outputs": [
@@ -83,7 +95,7 @@
        "]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -97,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "7e79e7ad",
    "metadata": {},
    "outputs": [
@@ -114,7 +126,7 @@
        "]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -126,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "cbd029ed",
    "metadata": {},
    "outputs": [
@@ -142,7 +154,7 @@
        "]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -154,29 +166,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "dedcc436",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "false"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "Some(f64::NAN)==None"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 8,
-   "id": "06e746cd",
+   "id": "dedcc436",
    "metadata": {},
    "outputs": [
     {
@@ -191,12 +182,33 @@
     }
    ],
    "source": [
-    "f64::NAN==f64::NAN"
+    "Some(f64::NAN)==None"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
+   "id": "06e746cd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "false"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f64::NAN==f64::NAN"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "id": "463ce99c",
    "metadata": {},
    "outputs": [
@@ -206,7 +218,7 @@
        "1"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -218,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "d49b2899",
    "metadata": {},
    "outputs": [
@@ -233,7 +245,7 @@
        "]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -244,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "645e0a22",
    "metadata": {},
    "outputs": [
@@ -260,7 +272,7 @@
        "]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -280,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "6670bae7",
    "metadata": {},
    "outputs": [
@@ -293,7 +305,7 @@
        "]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -305,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "24dfadbd",
    "metadata": {},
    "outputs": [
@@ -320,7 +332,7 @@
        "]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -332,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "7d0ea699",
    "metadata": {},
    "outputs": [
@@ -342,7 +354,7 @@
        "\"employees\""
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -354,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "8e7e608d",
    "metadata": {},
    "outputs": [
@@ -369,7 +381,7 @@
        "]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -381,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "fb2c6794",
    "metadata": {},
    "outputs": [
@@ -397,7 +409,7 @@
        "]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -417,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "a7482f64",
    "metadata": {},
    "outputs": [
@@ -431,7 +443,7 @@
        "]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -452,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "2b03ff7f",
    "metadata": {},
    "outputs": [
@@ -467,7 +479,7 @@
        "]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -479,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "e3827fa2",
    "metadata": {},
    "outputs": [
@@ -493,7 +505,7 @@
        "]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -513,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "61abe754",
    "metadata": {},
    "outputs": [
@@ -523,7 +535,7 @@
        "2"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -543,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "id": "cf75bcf3",
    "metadata": {},
    "outputs": [
@@ -558,7 +570,7 @@
        "]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -578,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "id": "253dac33",
    "metadata": {},
    "outputs": [
@@ -588,7 +600,7 @@
        "false"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -608,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "id": "33bf049f",
    "metadata": {},
    "outputs": [
@@ -622,7 +634,7 @@
        "]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -642,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "id": "63fac5d7",
    "metadata": {},
    "outputs": [
@@ -665,7 +677,7 @@
        "]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -679,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "id": "05830b3f",
    "metadata": {},
    "outputs": [
@@ -697,7 +709,7 @@
        "]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -711,7 +723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "id": "61cdca14",
    "metadata": {},
    "outputs": [
@@ -734,7 +746,7 @@
        "]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -756,7 +768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "id": "f65162bd",
    "metadata": {},
    "outputs": [
@@ -773,7 +785,7 @@
        "])"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -794,7 +806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "id": "3b7acd52",
    "metadata": {},
    "outputs": [
@@ -816,7 +828,7 @@
        "]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -844,7 +856,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "id": "a239fa4b",
    "metadata": {},
    "outputs": [
@@ -863,7 +875,7 @@
        "]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -884,7 +896,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "id": "cfae8d65",
    "metadata": {},
    "outputs": [
@@ -903,7 +915,7 @@
        "]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -924,7 +936,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "id": "0d33ffa2",
    "metadata": {},
    "outputs": [
@@ -943,7 +955,7 @@
        "]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -964,7 +976,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "id": "a68a40ec",
    "metadata": {},
    "outputs": [
@@ -983,7 +995,7 @@
        "]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1004,7 +1016,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "id": "4ff734e7",
    "metadata": {},
    "outputs": [
@@ -1023,7 +1035,7 @@
        "]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1044,7 +1056,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "id": "0ec56831",
    "metadata": {},
    "outputs": [
@@ -1061,7 +1073,7 @@
        "])"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1098,7 +1110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 36,
    "id": "9e0af37a",
    "metadata": {},
    "outputs": [
@@ -1108,7 +1120,7 @@
        "-1.09"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1128,7 +1140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 37,
    "id": "64eb9d9e",
    "metadata": {},
    "outputs": [
@@ -1138,7 +1150,7 @@
        "0.53"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1158,7 +1170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 40,
    "id": "d60f2d8c",
    "metadata": {},
    "outputs": [
@@ -1168,20 +1180,20 @@
        "shape: (3,)\n",
        "Series: 'Measurements' [f64]\n",
        "[\n",
-       "\t0.53\n",
        "\t-7.04\n",
        "\t3.98\n",
+       "\t0.53\n",
        "]"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "let s = Series::new(\"Measurements\", &[-1.01,  0.86, -4.60, 3.98,  0.53, -7.04, 3.98,  0.53, -7.04]);\n",
-    "s.mode().unwrap()"
+    "mode::mode(&s).unwrap()"
    ]
   },
   {
@@ -1202,7 +1214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 41,
    "id": "4a2af097",
    "metadata": {},
    "outputs": [
@@ -1216,7 +1228,7 @@
        "]"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1231,7 +1243,8 @@
    "id": "cb28a41d",
    "metadata": {},
    "source": [
-    "<hr />"
+    "---\n",
+    "---"
    ]
   }
  ],
